# pegaflow-hust

./: .gitignore  AGENTS.md  ASCEND_DMA_FIX_REPORT.md  PegaFlow-Hust_独立仓库可行性详细评估.md  e2e_ssd_test.py  e2e_test.py  e2e_vllm_test.py  run_e2e_test.sh  run_load_e2e.sh  run_vllm_e2e.sh  typos.toml  技术报告-v2.md  技术报告-v3.md  技术报告.md
.github/workflows/: ci.yml
docs/: save-load-diagnostic-report.md  vllm-request-state-machine.md
pegaflow-common/src/: lib.rs  numa.rs
pegaflow-core/: Cargo.toml  build.rs
pegaflow-core/benches/: ascend_transfer.rs  cpu_path.rs
pegaflow-core/src/: block.rs  gpu_worker.rs  instance.rs  lib.rs  offload.rs  pinned_mem.rs  pinned_pool.rs  topology.rs
pegaflow-core/src/backing/: uring.rs
pegaflow-core/src/device/: ascend.rs  ascend_batch.c  cuda.rs  mod.rs
pegaflow-core/src/instance/: tests.rs
pegaflow-core/src/storage/: read_cache.rs
pegaflow-core/src/transfer/: ascend_memcpy.rs  kernel.rs  memcpy.rs  mod.rs
pegaflow-core/tests/: ascend_memcpy_roundtrip.rs  ascend_unified_integration.rs  engine_basic.rs  save_validation.rs
pegaflow-core/tests/common/: harness.rs
pegaflow-metaserver/benches/: unregister_node.rs
pegaflow-proto/proto/: engine.proto
pegaflow-server/: Cargo.toml
pegaflow-server/examples/: p2p_bench.rs
pegaflow-server/src/: check_ascend_version.rs  http_server.rs  lib.rs  registry.rs  service.rs
pegaflow-server/tests/: p2p_rdma.rs
pegaflow-transfer/: Cargo.toml
pegaflow-transfer/src/: cuda_sys.rs  lib.rs  (+1 more)
python/: Cargo.toml  pyproject.toml
scripts/: bench_multi_baseline.sh  bench_multi_pegaflow.sh  bench_pegaflow.sh  bench_pegaflow_multi.sh  build-wheel.sh  check.sh  diagnose_fork_socket.py  diagnose_vllm_tcp.sh
(+25 files in other folders)
